fix: fixed z-index on case list items

--- a/src/components/flow/routers/caselist/CaseList.module.scss
+++ b/src/components/flow/routers/caselist/CaseList.module.scss
@@ -23,6 +23,10 @@
   }
 }
 
+.card_z_index {
+  z-index: 2000;
+}
+
 .kase {
   &:last-child {
     :global {
